@@ -1,7 +1,7 @@
 #  File src/library/stats/R/splinefun.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2017 The R Core Team
+#  Copyright (C) 1995-2019 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -24,7 +24,7 @@ splinefun <-
              method = c("fmm", "periodic", "natural", "monoH.FC", "hyman"),
              ties = mean)
 {
-    x <- regularize.values(x, y, ties) # -> (x,y) numeric of same length
+    x <- regularize.values(x, y, ties, missing(ties)) # -> (x,y) numeric of same length
     y <- x$y
     x <- x$x
     nx <- length(x) # large vectors ==> non-integer
